--- a/Exemplar_Course 6 Waze project lab.ipynb
+++ b/Exemplar_Course 6 Waze project lab.ipynb
@@ -6,23 +6,7 @@
     "id": "DtNBZFHO3M7n"
    },
    "source": [
-    "# **Waze Project**\n",
-    "**Course 6 - The nuts and bolts of machine learning**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "XfCZ5KuI_2lT"
-   },
-   "source": [
-    "Your team is close to completing their user churn project. Previously, you completed a project proposal, and used Python to explore and analyze Waze’s user data, create data visualizations, and conduct a hypothesis test. Most recently, you built a binomial logistic regression model based on multiple variables.\n",
-    "\n",
-    "Leadership appreciates all your hard work. Now, they want your team to build a machine learning model to predict user churn. To get the best results, your team decides to build and test two tree-based models: random forest and XGBoost.\n",
-    "\n",
-    "Your work will help leadership make informed business decisions to prevent user churn, improve user retention, and grow Waze’s business.\n",
-    "\n",
-    "\n"
+    "# **Waze Project**"
    ]
   },
   {
@@ -31,17 +15,15 @@
     "id": "rgSbVJvomcVa"
    },
    "source": [
-    "# **Course 6 End-of-Course Project: Build a machine learning model**\n",
+    "# * Build a machine learning model**\n",
     "\n",
-    "In this activity, you will practice using tree-based modeling techniques to predict on a binary target class.\n",
+    "In this activity, we will practice using tree-based modeling techniques to predict on a binary target class.\n",
     "<br/>\n",
     "\n",
     "**The purpose** of this model is to find factors that drive user churn.\n",
     "\n",
     "**The goal** of this model is to predict whether or not a Waze user is retained or churned.\n",
     "<br/>\n",
-    "\n",
-    "*This activity has three parts:*\n",
     "\n",
     "**Part 1:** Ethical considerations\n",
     "* Consider the ethical implications of the request\n",
@@ -55,10 +37,6 @@
     "**Part 3:** Modeling\n",
     "\n",
     "* Build the models, evaluate them, and advise on next steps\n",
-    "\n",
-    "Follow the instructions and answer the questions below to complete the activity. Then, you will complete an Executive Summary using the questions listed on the PACE Strategy Document.\n",
-    "\n",
-    "Be sure to complete this activity before moving on. The next course item will provide you with a completed exemplar to compare to your own work.\n",
     "\n"
    ]
   },
@@ -98,9 +76,6 @@
     "id": "E5g1A74r0ow_"
    },
    "source": [
-    "<img src=\"images/Plan.png\" width=\"100\" height=\"100\" align=left>\n",
-    "\n",
-    "\n",
     "## **PACE: Plan**\n",
     "\n",
     "Consider the questions in your PACE Strategy Document to reflect on the Plan stage.\n",
@@ -370,7 +345,6 @@
     "id": "EgPRBjizg1oo"
    },
    "source": [
-    "<img src=\"images/Analyze.png\" width=\"100\" height=\"100\" align=left>\n",
     "\n",
     "## **PACE: Analyze**\n",
     "Consider the questions in your PACE Strategy Document to reflect on the Analyze stage."
@@ -2915,57 +2889,7 @@
     "\n",
     "Also, note that the important features in one model might not be the same as the important features in another model. That's why you shouldn't discount features as unimportant without thoroughly examining them and understanding their relationship with the dependent variable, if possible. These discrepancies between features selected by models are typically caused by complex feature interactions.\n",
     "\n",
-    "Remember, sometimes your data simply will not be predictive of your chosen target. This is common. Machine learning is a powerful tool, but it is not magic. If your data does not contain predictive signal, even the most complex algorithm will not be able to deliver consistent and accurate predictions. Do not be afraid to draw this conclusion.\n",
-    "\n",
-    "Even if you cannot use the model to make strong predictions, was the work done in vain? What insights can you report back to stakeholders?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "IG-TNPtJSggx"
-   },
-   "source": [
-    "### **Task 15. Conclusion**\n",
-    "\n",
-    "Now that you've built and tested your machine learning models, the next step is to share your findings with the Waze leadership team. Consider the following questions as you prepare to write your executive summary. Think about key points you may want to share with the team, and what information is most relevant to the user churn project.\n",
-    "\n",
-    "**Questions:**\n",
-    "\n",
-    "1. Would you recommend using this model for churn prediction? Why or why not?\n",
-    "\n",
-    "> _It depends. What would the model be used for? If it's used to drive consequential business decisions, then no. The model is not a strong enough predictor, as made clear by its poor recall score. However, if the model is only being used to guide further exploratory efforts, then it can have value._\n",
-    "\n",
-    "2. What tradeoff was made by splitting the data into training, validation, and test sets as opposed to just training and test sets?\n",
-    "\n",
-    "> _Splitting the data three ways means that there is less data available to train the model than splitting just two ways. However, performing model selection on a separate validation set enables testing of the champion model by itself on the test set, which gives a better estimate of future performance than splitting the data two ways and selecting a champion model by performance on the test data._\n",
-    "\n",
-    "3. What is the benefit of using a logistic regression model over an ensemble of tree-based models (like random forest or XGBoost) for classification tasks?\n",
-    "\n",
-    "> _Logistic regression models are easier to interpret. Because they assign coefficients to predictor variables, they reveal not only which features factored most heavily into their final predictions, but also the directionality of the weight. In other words, they tell you if each feature is positively or negatively correlated with the target in the model's final prediction._\n",
-    "\n",
-    "4. What is the benefit of using an ensemble of tree-based models like random forest or XGBoost over a logistic regression model for classification tasks?\n",
-    "\n",
-    "> _Tree-based model ensembles are often better predictors. If the most important thing is the predictive power of the model, then tree-based modeling will usually win out against logistic regression (but not always!). They also require much less data cleaning and require fewer assumptions about the underlying distributions of their predictor variables, so they're easier to work with._\n",
-    "\n",
-    "5. What could you do to improve this model?\n",
-    "\n",
-    "> _New features could be engineered to try to generate better predictive signal, as they often do if you have domain knowledge. In the case of this model, the engineered features made up over half of the top 10 most-predictive features used by the model. It could also be helpful to reconstruct the model with different combinations of predictor variables to reduce noise from unpredictive features._\n",
-    "\n",
-    "6. What additional features would you like to have to help improve the model?\n",
-    "\n",
-    "> _It would be helpful to have drive-level information for each user (such as drive times, geographic locations, etc.). It would probably also be helpful to have more granular data to know how users interact with the app. For example, how often do they report or confirm road hazard alerts? Finally, it could be helpful to know the monthly count of unique starting and ending locations each driver inputs._\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "-GbDEybFxqll"
-   },
-   "source": [
-    "### **BONUS**\n",
-    "\n",
-    "The following content is not required, but demonstrates further steps that you might take to tailor your model to your use case."
+    "Remember, sometimes your data simply will not be predictive of your chosen target. This is common. Machine learning is a powerful tool, but it is not magic. If your data does not contain predictive signal, even the most complex algorithm will not be able to deliver consistent and accurate predictions. Do not be afraid to draw this conclusion.\n"
    ]
   },
   {
@@ -2978,7 +2902,7 @@
     "\n",
     "The default decision threshold for most implementations of classification algorithms&mdash;including scikit-learn's&mdash;is 0.5. This means that, in the case of the Waze models, if they predicted that a given user had a 50% probability or greater of churning, then that user was assigned a predicted value of `1`&mdash;the user was predicted to churn.\n",
     "\n",
-    "With imbalanced datasets where the response class is a minority, this threshold might not be ideal. You learned that a precision-recall curve can help to visualize the trade-off between your model's precision and recall.\n",
+    "With imbalanced datasets where the response class is a minority, this threshold might not be ideal. We learned that a precision-recall curve can help to visualize the trade-off between your model's precision and recall.\n",
     "\n",
     "Here's the precision-recall curve for the XGBoost champion model on the test data."
    ]
@@ -3538,22 +3462,6 @@
     "\n",
     "# Get evaluation metrics for when the threshold is 0.124\n",
     "get_test_scores('XGB, threshold = 0.124', new_preds, y_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "gwZs_YN8oEKy"
-   },
-   "source": [
-    "It worked! Hopefully now you understand that changing the decision threshold is another tool that can help you achieve useful results from your model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Congratulations!** You've completed this lab. However, you may not notice a green check mark next to this item on Coursera's platform. Please continue your progress regardless of the check mark. Just click on the \"save\" icon at the top of this notebook to ensure your work has been logged."
    ]
   }
  ],
